[package]
name = "wordcloud-rs"
version = "0.1.5"
edition = "2021"
description = "A word-cloud image generation crate."
license = "Unlicense"
repository = "https://github.com/Inspirateur/wordcloud-rs"
keywords = ["wordcloud", "word", "visualisation", "image", "text"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fontdue = "0.7"
image = "0.24"
palette = "0.6"
anyhow = "1.0"
itertools = "0.10"
rand = "0.8"
lazy_static = "1.4"
log = "0.4"

[dev-dependencies]
regex = "1.7"