[package]
name = "wordcloud-rs"
version = "0.1.11"
edition = "2021"
description = "A word-cloud image generation crate."
license = "Unlicense"
repository = "https://github.com/Inspirateur/wordcloud-rs"
keywords = ["wordcloud", "word", "visualisation", "image", "text"]

[dependencies]
fontdue = "0.7"
image = "0.24"
palette = "0.6"
anyhow = "1.0"
itertools = "0.10"
rand = "0.8"
log = "0.4"
rand_distr = "0.4"
twemoji-rs = "0.1"

[dev-dependencies]
env_logger = "0.10"
regex = "1.7"
lazy_static = "1.4"
