[package]
name = "wordcloud-rs"
version = "0.1.17"
edition = "2021"
description = "A word-cloud image generation crate."
license = "Unlicense"
repository = "https://github.com/Inspirateur/wordcloud-rs"
keywords = ["wordcloud", "word", "visualisation", "image", "text"]

[features]
default = ["fs"]
fs = []

[dependencies]
fontdue = "0.9"
image = "0.25"
palette = "0.7"
anyhow = "1.0"
itertools = "0.14"
rand = "0.8"
log = "0.4"
rand_distr = "0.4"
twemoji-rs = "0.1"
binary_raster = "0.1"

[dev-dependencies]
env_logger = "0.11"
regex = "1.11"
lazy_static = "1.5"
criterion = "0.5"

[[bench]]
name = "wordcloud"
harness = false